--- a/Seminarios/S2/S2.md
+++ b/Seminarios/S2/S2.md
@@ -64,7 +64,7 @@ int MContador2::leer_valor(){
 } ;
 ```
 
-Hay que usar la variable `resultado` ya que si se liberara el cerrojo y luego hicieramos `return cont`, se leería `cont` fuera de exclusión mutua.
+Hay que usar la variable `resultado` ya que si se liberara el cerrojo y luego hiciéramos `return cont`, se leería `cont` fuera de exclusión mutua.
 
 Sin embargo, si se produce una **excepción** durante la ejecución de un método, no se libraría el cerrojo.
 
